release: v1.0.0
Bumps root pom + all 160 module poms from 1.0.0-SNAPSHOT to 1.0.0.

Also captures the full working-tree state that the UAT sweep validated
(reactor 8474/0/0/10, all 7 skills, all app boots, all live LLM
roundtrips). This commit adds every previously-untracked module that
was created during the Boot 4 upgrade + pilot cycle but never `git
add`ed until the release:

New modules (previously untracked, referenced from the reactor poms):
- apps/jaiclaw-pipeline-studio — React 19 Flow SPA + Java autoconfig
  serving /studio/**
- extensions/jaiclaw-github-copilot — Spring AI ChatModel adapter over
  the official copilot-sdk-java
- extensions/jaiclaw-pipeline-authoring — draft store + REST + MCP
  + lifecycle manager + URI-scheme allowlist + role-guarded authz
- extensions/jaiclaw-pipeline-dashboard — read-only vanilla HTML
  dashboard served at /pipelines/dashboard
- extensions/jaiclaw-pipeline-processors — ~15 baseline
  ConfigurableStageProcessor beans + 7 AI presets + 6 Camel URI templates
- extensions/jaiclaw-session-redis — Redis-backed SessionManager for
  durable chat memory across pod restarts
- extensions/jaiclaw-web-errors-{core,mvc,webflux} — framework default
  web exception handlers
- jaiclaw-examples/multi-provider-toggle — fixture app for the
  LlmProviderBridge e2e Scenario 7

New sources in existing modules (previously untracked):
- core/jaiclaw-ascii-render/skill — RenderableTemplate SPI + Registry
  + SceneSpecHelpers + object-rendering bundled SKILL.md
- core/jaiclaw-core/hook/event — 8 first-class HookEvent subclasses
  (Pipeline execution + stage events, AgentMind Soul/Memory/Tendencies
  events, Pipeline deploy/undeploy events)
- core/jaiclaw-tools/builtin/render — RenderResponseTool
- extensions/jaiclaw-blueprints/pipeline — PipelineAuthorBlueprints
- extensions/jaiclaw-pipeline — ConfigurableStageProcessor SPI,
  PipelineProcessor annotation, PipelineResult + TextResult,
  mcp/render/tool/web subpackages, 5 new specs
- jaiclaw-maven-